--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -89,11 +89,10 @@
 
 
             <TextView
-                android:id="@+id/tv_count"
+                android:id="@+id/tv_counttt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-
                 android:textColor="@android:color/black"/>
 
         <TextView
