--- a/app/src/main/res/layout/activity_signup_mail.xml
+++ b/app/src/main/res/layout/activity_signup_mail.xml
@@ -10,12 +10,11 @@
 
 
     <ImageView
+        android:id="@+id/iv_resuserimg"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:tint="@android:color/white"
-        android:backgroundTint="@android:color/white"
         android:src="@drawable/uploadimage" />
 
     <EditText
