--- a/app/src/main/res/layout/fragment_edit_profile_busi.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_busi.xml
@@ -16,7 +16,7 @@
 
 
     <EditText
-        android:id="@+id/et_namep"
+        android:id="@+id/et_namepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
 
 
     <EditText
-        android:id="@+id/et_nameep"
+        android:id="@+id/et_nameepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -42,7 +42,7 @@
 
 
     <EditText
-        android:id="@+id/et_emailep"
+        android:id="@+id/et_emailepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -55,7 +55,7 @@
         android:backgroundTint="@android:color/white"/>
 
     <EditText
-        android:id="@+id/et_phoneep"
+        android:id="@+id/et_phoneepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -69,7 +69,7 @@
 
 
     <Button
-        android:id="@+id/btn_doneep"
+        android:id="@+id/btn_doneepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Done"
@@ -83,7 +83,7 @@
 
 
     <Button
-        android:id="@+id/btn_changepassep"
+        android:id="@+id/btn_changepassepbusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Change Password"
