--- a/app/src/main/res/layout/fragment_upload_menu.xml
+++ b/app/src/main/res/layout/fragment_upload_menu.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/llreg"
     tools:context="com.infosolution.dev.tfc.business_fragments.UploadMenuFragment">
 <ScrollView
     android:layout_width="match_parent"
@@ -21,13 +22,22 @@
         android:layout_marginTop="30dp"
         android:textColor="#F9A825"
         android:textAppearance="?android:textAppearanceMedium"/>
-    <ImageView
+   <!-- <ImageView
         android:id="@+id/iv_image_upload"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        android:src="@drawable/uploadimage" />
+        android:src="@drawable/uploadimage" />-->
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/iv_image_upload"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/uploadimage"
+            app:civ_border_width="2dp"
+            android:layout_gravity="center"
+            app:civ_border_color="#FF000000"/>
 
     <EditText
         android:id="@+id/et_menuname_upload"
@@ -141,7 +151,7 @@
         android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Quantity Left"
-        android:inputType="text"
+        android:inputType="number"
         android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
