--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -12,7 +12,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewnavheader"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
@@ -20,6 +20,7 @@
         app:srcCompat="@drawable/icon" />
 
     <TextView
+        android:id="@+id/tv_navheader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Shreyansh Srivastava"
