--- a/app/src/main/res/layout/orderhistory_row.xml
+++ b/app/src/main/res/layout/orderhistory_row.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@android:color/white">
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="250dp"
+        android:layout_alignParentRight="true"
+        android:background="#1A000000"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="200dp"
@@ -18,19 +27,27 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/icon"/>
 
+        <ImageView
+            android:id="@+id/delimg"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
+            android:src="@drawable/deliver"/>
+
         <TextView
             android:id="@+id/tv_deliverhis"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Delivered"
             android:gravity="center"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="0dp"
             android:layout_gravity="right"
-            android:background="@android:color/black"
             android:padding="2dp"
+            android:textSize="11sp"
             android:textColor="@android:color/white"
             />
+
     </FrameLayout>
 
     <TextView
@@ -66,7 +83,6 @@
             android:layout_height="wrap_content"
             android:text="Quantity:"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
             android:textColor="#9a9a9a"/>
 
 
@@ -76,7 +92,7 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
+
             android:textColor="#9a9a9a"/>
 
 
@@ -87,7 +103,7 @@
             android:text="Price:"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
+
             android:textColor="#9a9a9a"/>
 
 
@@ -97,7 +113,6 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
             android:textColor="#9a9a9a"/>
 
 
@@ -116,4 +131,10 @@
         android:textStyle="bold"
         android:textColor="#9a9a9a"/>
 
+    <TextView
+        android:id="@+id/del"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      android:visibility="gone"/>
 </LinearLayout>
+</RelativeLayout>
