--- a/app/src/main/res/menu/activity_business_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_business_navigation_drawer.xml
@@ -27,6 +27,10 @@
                 android:id="@+id/nav_editprofile"
                 android:title="Edit Profile" />
 
+    <item
+        android:id="@+id/logout"
+        android:title="Log Out" />
+
 
 
 </menu>
