--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -36,6 +36,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:inputType="textPassword"
         android:textColor="@android:color/black"
         android:backgroundTint="#99000000"
         android:hint="Enter Old Password"/>
@@ -49,6 +50,7 @@
         android:textColor="@android:color/black"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:inputType="textPassword"
         android:backgroundTint="#99000000"
         android:hint="Enter new Password"/>
 
@@ -73,7 +75,8 @@
         android:background="@android:color/black"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
