--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -21,10 +21,11 @@
             android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/ivvvvv"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/icon" />
 
     <TextView
@@ -74,9 +75,10 @@
     android:id="@+id/et_com"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-  android:hint="Comments"
+    android:hint="Comments"
     android:textColorHint="@android:color/black"
     android:padding="15dp"
+    android:maxLength="600"
     android:textColor="@android:color/black"/>
 
 
