--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -18,6 +18,20 @@
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp" />
 
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No Data Available"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:textColor="@android:color/black"
+        android:visibility="gone"
+
+        />
+
+
+
 
 
 
