--- a/app/src/main/res/layout/fragment_upload_menu.xml
+++ b/app/src/main/res/layout/fragment_upload_menu.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/llreg"
+    android:background="#110e19"
     tools:context="com.infosolution.dev.tfc.business_fragments.UploadMenuFragment">
 <ScrollView
     android:layout_width="match_parent"
@@ -172,7 +173,8 @@
         android:textAppearance="?android:textAppearanceMedium"
         android:textAllCaps="true"
         android:textColor="#fff"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginBottom="90dp"/>
     </LinearLayout>
 </ScrollView>
 
