--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -74,14 +74,17 @@
             android:id="@+id/sp_country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/dropdown"
             android:padding="16dp"
             android:paddingLeft="22dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/dropdown"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
             android:textAlignment="center"
+            android:layout_weight="1.2"
             android:paddingRight="22dp"/>
+
+
 
     <EditText
         android:id="@+id/et_cityreg"
