fetch all api's of business Part

--- a/app/src/main/res/layout/fragment_edit_profile_busi.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_busi.xml
@@ -22,8 +22,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="Shreyansh "
+        android:hint="UserName"
         android:textColor="@android:color/black"
+        android:textCursorDrawable="@null"
         android:textColorHint="#676767"
         android:gravity="center_horizontal"
         android:backgroundTint="@android:color/white"/>
@@ -36,7 +37,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="Shreyansh srivastva"
+        android:textCursorDrawable="@null"
+        android:hint="Store Name"
         android:textColor="@android:color/black"
         android:textColorHint="#676767"
         android:gravity="center_horizontal"
@@ -50,8 +52,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:textCursorDrawable="@null"
         android:textColor="@android:color/black"
-        android:hint="Abc@gmail.com"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColorHint="#676767"
         android:gravity="center"
@@ -64,7 +67,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="85638669863"
+        android:textCursorDrawable="@null"
+        android:hint="Contact No."
         android:textColor="@android:color/black"
         android:inputType="number"
         android:textColorHint="#676767"
