--- a/app/src/main/res/drawable/yellowborder.xml
+++ b/app/src/main/res/drawable/yellowborder.xml
@@ -10,7 +10,7 @@
                 android:bottomRightRadius="5dip"
                 />-->
             <stroke android:width="2dip" android:color="@android:color/white"  />
-            <solid android:color="#FFFF00" />
+            <solid android:color="#ffc107" />
             <!--<gradient android:angle="-90" android:startColor="#ffffff" android:endColor="#ffffff" />-->
         </shape>
     </item>
