--- a/app/src/main/res/layout/activity_login_business.xml
+++ b/app/src/main/res/layout/activity_login_business.xml
@@ -5,9 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/loginbg"
+    android:background="@drawable/resbg"
     tools:context="com.infosolution.dev.tfc.activities.LoginMailActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#cc000000">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -104,5 +109,5 @@
     </RelativeLayout>
         </LinearLayout>
     </ScrollView>
-
+    </LinearLayout>
 </LinearLayout>
