--- a/app/src/main/res/layout/activity_login_mail.xml
+++ b/app/src/main/res/layout/activity_login_mail.xml
@@ -8,6 +8,12 @@
     android:background="@drawable/loginbg"
     tools:context="com.infosolution.dev.tfc.activities.LoginMailActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#cc000000">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -104,5 +110,5 @@
    </RelativeLayout>
         </LinearLayout>
     </ScrollView>
-
+    </LinearLayout>
 </LinearLayout>
