--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:background="#352F4C"
-
+android:textSize="15sp"
             />
         </LinearLayout>
 
@@ -66,7 +66,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="9dp"
                 android:background="#4DFFFFFF">
             <ImageView
                 android:layout_width="30dp"
@@ -83,6 +83,7 @@
             android:background="#3A589E"
             android:textColor="@android:color/white"
             android:textAllCaps="false"
+            android:textSize="15sp"
 
             />
         </LinearLayout>
@@ -98,6 +99,7 @@
             android:layout_marginTop="15dp"
             android:textAllCaps="false"
             android:textColor="#00DDCB"
+            android:textSize="15sp"
             android:background="@drawable/borderet"
             android:text="Business Login" />
 
