--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -8,11 +8,15 @@
     android:orientation="vertical"
     tools:context="com.infosolution.dev.tfc.activities.ProductPageActivity">
 
+    <include
+        layout="@layout/tonightplates_actinbar"
+        android:id="@+id/tonight"/>
+
 
     <ImageView
         android:id="@+id/iv_proimg"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="380dp"
         android:src="@drawable/abc" />
 
     <TextView
@@ -28,7 +32,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
