--- a/app/src/main/res/layout/activity_signup_busi.xml
+++ b/app/src/main/res/layout/activity_signup_busi.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context="com.infosolution.dev.tfc.activities.SignupUserActivity">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#cc000000">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -199,4 +205,5 @@
 
         </LinearLayout>
     </ScrollView>
+</LinearLayout>
 </LinearLayout>
