--- a/app/src/main/res/layout/activity_user_reg_next.xml
+++ b/app/src/main/res/layout/activity_user_reg_next.xml
@@ -8,6 +8,12 @@
     android:background="@drawable/resbg"
     tools:context="com.infosolution.dev.tfc.business.UserRegNext">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#cc000000">
+
     <Spinner
         android:id="@+id/sp_cusinetype"
         android:layout_width="match_parent"
@@ -71,4 +77,5 @@
         android:textColor="#fff"
         android:textStyle="bold" />
 
+</LinearLayout>
 </LinearLayout>
