--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     android:background="@drawable/resbg"
     tools:context="com.infosolution.dev.tfc.business.UserRegActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#cc000000">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -174,4 +180,5 @@
         android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
+</LinearLayout>
 </LinearLayout>
