--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -1,11 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f5f5f5"
+    android:id="@+id/container_layout"
     android:layout_gravity="center_horizontal"
     tools:context="com.infosolution.dev.tfc.fragment.EditProfileFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_imgep"
@@ -26,6 +32,7 @@
         android:textColorHint="#676767"
         android:textColor="@android:color/black"
         android:gravity="center_horizontal"
+        android:textCursorDrawable="@null"
         android:backgroundTint="@android:color/white"/>
 
 
@@ -39,6 +46,7 @@
         android:hint="Abc@gmail.com"
         android:inputType="textEmailAddress"
         android:textColorHint="#676767"
+        android:textCursorDrawable="@null"
         android:gravity="center"
         android:textColor="@android:color/black"
         android:backgroundTint="@android:color/white"/>
@@ -49,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
+        android:textCursorDrawable="@null"
         android:layout_marginRight="20dp"
         android:hint="85638669863"
         android:inputType="number"
@@ -84,6 +93,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="115dp"/>
+    </LinearLayout>
 
-
-</LinearLayout>
+</FrameLayout>
