--- a/app/src/main/res/layout/fragment_upload_menu.xml
+++ b/app/src/main/res/layout/fragment_upload_menu.xml
@@ -35,7 +35,7 @@
             android:id="@+id/iv_image_upload"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/uploadimage"
+            android:src="@drawable/upim"
             app:civ_border_width="2dp"
             android:layout_gravity="center"
             app:civ_border_color="#FF000000"/>
@@ -57,38 +57,47 @@
         android:textColorHint="@android:color/white"
         android:textCursorDrawable="@null"
         android:textStyle="bold" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_weight="2"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
+    >
     <EditText
         android:id="@+id/et_price_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Price"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:padding="10dp"
+        android:layout_weight="1"
+        android:backgroundTint="@android:color/transparent"
+        android:drawableTint="@android:color/transparent"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:textCursorDrawable="@null"
         android:textStyle="bold" />
 
-   <!-- <Spinner
-        android:id="@+id/sp_foodtype_upload"
-        android:layout_width="match_parent"
+   <!-- <TextView
+        android:id="@+id/tv_currsign"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:layout_weight="1"
+        android:text=" "
         android:gravity="center"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
+        android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />-->
+        android:layout_gravity="center"/>-->
+
+</LinearLayout>
+
+
 
         <Spinner
             android:id="@+id/sp_foodtype"
@@ -174,7 +183,7 @@
         android:textAllCaps="true"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:layout_marginBottom="90dp"/>
+        android:layout_marginBottom="130dp"/>
     </LinearLayout>
 </ScrollView>
 
