--- a/app/src/main/res/layout/orderhistory_row.xml
+++ b/app/src/main/res/layout/orderhistory_row.xml
@@ -20,12 +20,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/hiss"/>
+
     <ImageView
         android:id="@+id/iv_logohis"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/icon"/>
 
         <ImageView
