--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_dashboard"
             android:title="DashBoard"
-            android:icon="@drawable/favselectedicon"
+            android:icon="@drawable/dashboardicon"
             android:iconTint="@android:color/holo_red_dark" />
 
 
