--- a/app/src/main/res/layout/activity_signup_busi.xml
+++ b/app/src/main/res/layout/activity_signup_busi.xml
@@ -39,11 +39,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
                 android:gravity="center"
                 android:hint="Please Enter Contact Person"
                 android:inputType="text"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -57,11 +57,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
                 android:gravity="center"
                 android:hint="Please Enter Store Name"
                 android:inputType="text"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -75,11 +75,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
                 android:gravity="center"
                 android:hint="Please Enter Your Position"
                 android:inputType="text"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -93,11 +93,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
                 android:gravity="center"
                 android:hint="Please Enter Phone Number"
                 android:inputType="number"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -112,11 +112,11 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
                 android:gravity="center"
                 android:hint="Please Enter Other Phone Number"
                 android:inputType="number"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -130,11 +130,12 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
+
                 android:gravity="center"
                 android:hint="Please Enter Password"
                 android:inputType="textPassword"
-                android:padding="10dp"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
@@ -148,11 +149,12 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@android:color/white"
+                android:padding="12dp"
+                android:background="@drawable/border"
                 android:gravity="center"
                 android:hint="Repeat Password"
                 android:inputType="textPassword"
-                android:padding="10dp"
+
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
