--- a/app/src/main/res/layout/activity_signup_mail.xml
+++ b/app/src/main/res/layout/activity_signup_mail.xml
@@ -24,11 +24,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Name"
         android:inputType="text"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -42,11 +42,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:gravity="center"
         android:hint="Please Enter Email Id"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -60,11 +60,12 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+
         android:gravity="center"
         android:hint="Please Enter Phone Number"
         android:inputType="number"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -78,11 +79,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:gravity="center"
         android:hint="Please Enter password"
         android:inputType="textPassword"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -97,11 +98,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:gravity="center"
         android:hint="Repeat Password"
         android:inputType="textPassword"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
