--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -28,11 +28,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="100dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Your Email id"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -46,11 +46,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:gravity="center"
         android:hint="Please Enter Address"
         android:inputType="text"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -99,11 +99,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Your City"
         android:inputType="text"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -118,11 +118,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:gravity="center"
         android:hint="Please Enter Zip Code"
         android:inputType="number"
-        android:padding="10dp"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -136,11 +136,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Please Enter Website"
         android:inputType="text"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -154,11 +154,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@android:color/white"
         android:gravity="center"
         android:hint="Other Information"
         android:inputType="textPassword"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:background="@drawable/border"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
